samples/kube/envoybootstrap.yaml
apiVersion: network.fanplane.io/v1alpha1
kind: EnvoyBootstrap
metadata:
  name: test-id
  namespace: fanplane
spec:
  admin:
    access_log_path: /gateway/admin_access.log
    address:
      socket_address: { address: 127.0.0.1, port_value: 9001 }
  static_resources:
    listeners:
    - address: tcp://127.0.0.1:10000
      filters:
      - name: http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - timeout_ms: 0
                prefix: "/"
                host_rewrite: www.google.com
                cluster: service_google
          filters:
          - name: router
            config: {}
  cluster_manager:
    clusters:
    - name: service_google
      connect_timeout_ms: 250
      type: logical_dns
      lb_type: round_robin
      hosts:
      - url: tcp://google.com:443
      ssl_context:
        sni: www.google.com
